--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -257,10 +257,17 @@ resources:
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
 
+  # Resource for site-specific injection of root certificate
+  NodeTLSCAData:
+    depends_on: BlockStorageDeployment
+    type: OS::TripleO::NodeTLSCAData
+    properties:
+      server: {get_resource: BlockStorage}
+
   # Hook for site-specific additional pre-deployment config,
   # applying to all nodes, e.g node registration/unregistration
   NodeExtraConfig:
-    depends_on: BlockStorageDeployment
+    depends_on: NodeTLSCAData
     type: OS::TripleO::NodeExtraConfig
     properties:
         server: {get_resource: BlockStorage}
@@ -304,4 +311,5 @@ outputs:
       list_join:
         - ''
         - - {get_attr: [BlockStorageDeployment, deploy_stdout]}
+          - {get_attr: [NodeTLSCAData, deploy_stdout]}
           - {get_param: UpdateIdentifier}
