--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -174,6 +174,13 @@ resources:
                 ceph::profile::params::cluster_network: {get_input: ceph_cluster_network}
                 ceph::profile::params::public_network: {get_input: ceph_public_network}
 
+  # Resource for site-specific injection of root certificate
+  NodeTLSCAData:
+    depends_on: CephStorageDeployment
+    type: OS::TripleO::NodeTLSCAData
+    properties:
+      server: {get_resource: CephStorage}
+
   # Hook for site-specific additional pre-deployment config, e.g extra hieradata
   CephStorageExtraConfigPre:
     depends_on: CephStorageDeployment
@@ -184,7 +191,7 @@ resources:
   # Hook for site-specific additional pre-deployment config,
   # applying to all nodes, e.g node registration/unregistration
   NodeExtraConfig:
-    depends_on: CephStorageExtraConfigPre
+    depends_on: [CephStorageExtraConfigPre, NodeTLSCAData]
     type: OS::TripleO::NodeExtraConfig
     properties:
         server: {get_resource: CephStorage}
@@ -225,5 +232,6 @@ outputs:
       list_join:
       - ','
       - - {get_attr: [CephStorageDeployment, deploy_stdout]}
+        - {get_attr: [NodeTLSCAData, deploy_stdout]}
         - {get_attr: [CephStorageExtraConfigPre, deploy_stdout]}
         - {get_param: UpdateIdentifier}
