Refacter Endpoints into EndpointMap
Because many of the service endpoints URLs use the same patterns for
generating the URLs it makes sense to use the same templates to reduce
the copy and paste.

In the process also adds support for explicitly specifying hostnames
for use in the endpoints.  Note: DNS must be pre-configured.   The
Heat templates do not directly configure DNS.

Change-Id: Ie3270909beca3d63f2d7e4bcb04c559380ddc54d
Co-Authored-By: Juan Antonio Osorio Robles <jaosorior@redhat.com>

--- a/os-apply-config/controller.yaml
+++ b/os-apply-config/controller.yaml
@@ -673,6 +673,7 @@ resources:
           debug: {get_input: debug}
           host: {get_input: controller_virtual_ip}
           port: {get_input: glance_port}
+          uri: {get_input: glance_uri}
           protocol: {get_input: glance_protocol}
           service-password: {get_input: glance_password}
           swift-store-user: service:glance
