--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -89,6 +89,10 @@ resource_registry:
   # Port assignments for service virtual IPs for the controller role
   OS::TripleO::Controller::Ports::RedisVipPort: network/ports/ctlplane_vip.yaml
 
+  # Service Endpoint Mappings
+  OS::TripleO::Endpoint: network/endpoints/endpoint.yaml
+  OS::TripleO::EndpointMap: network/endpoints/endpoint_map.yaml
+
   # validation resources
   OS::TripleO::AllNodes::Validation: all-nodes-validation.yaml
 
