--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -72,5 +72,9 @@ resource_registry:
   # Port assignments for service virtual IPs for the controller role
   OS::TripleO::Controller::Ports::RedisVipPort: network/ports/noop.yaml
 
+  # Service Endpoint Mappings
+  OS::TripleO::Endpoint: network/endpoints/endpoint.yaml
+  OS::TripleO::EndpointMap: network/endpoints/endpoint_map.yaml
+
   # validation resources
   OS::TripleO::AllNodes::Validation: os-apply-config/all-nodes-validation.yaml
