Expose the IP of the Endpoints
We expose all of the other parameters, so expose the IP too for
consistency

Change-Id: I5c31befde51e398318c7b8c744310212288ad892

--- a/network/endpoints/endpoint.yaml
+++ b/network/endpoints/endpoint.yaml
@@ -32,6 +32,7 @@ outputs:
     value:
       port: {get_param: [EndpointMap, {get_param: EndpointName }, port] }
       protocol: {get_param: [EndpointMap, {get_param: EndpointName }, protocol] }
+      ip: {get_param: IP}
       host:
         str_replace:
           template: {get_param: [EndpointMap, {get_param: EndpointName }, host]}
