Add the GlanceRegistry and Horizon endpoints to EndpointMap
We need to pass details of the Glance Registry and public Horizon
endpoints to the load balancers so add them to the EndpointMap

Change-Id: Ia6261223e7701734f47ce48471c86f690ba3dcd5

--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -52,9 +52,13 @@ parameters:
       GlanceAdmin: {protocol: 'http', port: '9292', host: 'IP_ADDRESS'}
       GlanceInternal: {protocol: 'http', port: '9292', host: 'IP_ADDRESS'}
       GlancePublic: {protocol: 'http', port: '9292', host: 'IP_ADDRESS'}
+      GlanceRegistryAdmin: {protocol: 'http', port: '9191', host: 'IP_ADDRESS'}
+      GlanceRegistryInternal: {protocol: 'http', port: '9191', host: 'IP_ADDRESS'}
+      GlanceRegistryPublic: {protocol: 'http', port: '9191', host: 'IP_ADDRESS'}
       HeatAdmin: {protocol: 'http', port: '8004', host: 'IP_ADDRESS'}
       HeatInternal: {protocol: 'http', port: '8004', host: 'IP_ADDRESS'}
       HeatPublic: {protocol: 'http', port: '8004', host: 'IP_ADDRESS'}
+      HorizonPublic: {protocol: 'http', port: '80', host: 'IP_ADDRESS'}
       KeystoneAdmin: {protocol: 'http', port: '35357', host: 'IP_ADDRESS'}
       KeystoneInternal: {protocol: 'http', port: '5000', host: 'IP_ADDRESS'}
       KeystonePublic: {protocol: 'http', port: '5000', host: 'IP_ADDRESS'}
@@ -172,6 +176,24 @@ resources:
       EndpointMap: { get_param: EndpointMap }
       CloudName: {get_param: CloudName}
       IP: {get_param: GlanceApiVirtualIP}
+  GlanceRegistryInternal:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: GlanceInternal
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: GlanceRegistryVirtualIP}
+  GlanceRegistryPublic:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: GlancePublic
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: PublicVirtualIP}
+  GlanceRegistryAdmin:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: GlanceAdmin
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: GlanceRegistryVirtualIP}
 
   HeatInternal:
     type: OS::TripleO::Endpoint
@@ -197,6 +219,15 @@ resources:
       IP: {get_param: HeatApiVirtualIP}
       CloudName: {get_param: CloudName}
       UriSuffix: '/v1/%(tenant_id)s'
+
+  HorizonPublic:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: HeatPublic
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: PublicVirtualIP}
+      CloudName: {get_param: CloudName}
+      UriSuffix: '/dashboard'
 
   KeystoneInternal:
     type: OS::TripleO::Endpoint
@@ -388,9 +419,13 @@ outputs:
       GlanceInternal: {get_attr: [ GlanceInternal, endpoint] }
       GlancePublic: {get_attr: [ GlancePublic, endpoint] }
       GlanceAdmin: {get_attr: [ GlanceAdmin, endpoint] }
+      GlanceRegistryInternal: {get_attr: [ GlanceRegistryInternal, endpoint] }
+      GlanceRegistryPublic: {get_attr: [ GlanceRegistryPublic, endpoint] }
+      GlanceRegistryAdmin: {get_attr: [ GlanceRegistryAdmin, endpoint] }
       HeatInternal: {get_attr: [ HeatInternal, endpoint] }
       HeatPublic: {get_attr: [ HeatPublic, endpoint] }
       HeatAdmin: {get_attr: [ HeatAdmin, endpoint] }
+      HorizonPublic: {get_attr: [ HorizonPublic, endpoint] }
       KeystoneInternal: {get_attr: [ KeystoneInternal, endpoint] }
       KeystonePublic: {get_attr: [ KeystonePublic, endpoint] }
       KeystoneAdmin: {get_attr: [ KeystoneAdmin, endpoint] }
