Deploy Aodh services, replacing Ceilometer Alarm
Ceilometer Alarm is deprecated in Liberty by Aodh.

This patch:
* manage Aodh Keystone resources
* deploy Aodh API under WSGI, Notifier, Listener and Evaluator
* manage new parameters to customize Aodh deployment
* uses ceilometer DB for the upgrade path
* pacemaker config

Depends-On: I9e34485285829884d9c954b804e3bdd5d6e31635
Depends-On: I891985da9248a88c6ce2df1dd186881f582605ee
Depends-On: Ied8ba5985f43a5c5b3be5b35a091aef6ed86572f

Co-Authored-By: Pradeep Kilambi <pkilambi@redhat.com>

Change-Id: I58d419173e80d2462accf7324c987c71420fd5f6

--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -1,6 +1,15 @@
 # Data in this file is used to generate the endpoint_map.yaml template.
 # Run the script build_endpoint_map.py to regenerate the file.
 
+Aodh:
+    Internal:
+        vip_param: AodhApi
+    Public:
+        vip_param: Public
+    Admin:
+        vip_param: AodhApi
+    port: 8042
+
 Ceilometer:
     Internal:
         vip_param: CeilometerApi
