--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -5,6 +5,7 @@
 heat_template_version: '2015-04-30'
 description: A map of OpenStack endpoints.
 parameters:
+  AodhApiVirtualIP: {type: string, default: ''}
   CeilometerApiVirtualIP: {type: string, default: ''}
   CinderApiVirtualIP: {type: string, default: ''}
   GlanceApiVirtualIP: {type: string, default: ''}
@@ -21,6 +22,9 @@ parameters:
   EndpointMap:
     type: json
     default:
+      AodhAdmin: {protocol: http, port: '8042', host: IP_ADDRESS}
+      AodhInternal: {protocol: http, port: '8042', host: IP_ADDRESS}
+      AodhPublic: {protocol: http, port: '8042', host: IP_ADDRESS}
       CeilometerAdmin: {protocol: http, port: '8777', host: IP_ADDRESS}
       CeilometerInternal: {protocol: http, port: '8777', host: IP_ADDRESS}
       CeilometerPublic: {protocol: http, port: '8777', host: IP_ADDRESS}
@@ -68,6 +72,120 @@ parameters:
 outputs:
   endpoint_map:
     value:
+      AodhAdmin:
+        host:
+          str_replace:
+            template:
+              get_param: [EndpointMap, AodhAdmin, host]
+            params:
+              CLOUDNAME: {get_param: CloudName}
+              IP_ADDRESS: {get_param: AodhApiVirtualIP}
+        port:
+          get_param: [EndpointMap, AodhAdmin, port]
+        protocol:
+          get_param: [EndpointMap, AodhAdmin, protocol]
+        uri:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, AodhAdmin, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, AodhAdmin, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: AodhApiVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, AodhAdmin, port]
+        uri_no_suffix:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, AodhAdmin, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, AodhAdmin, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: AodhApiVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, AodhAdmin, port]
+      AodhInternal:
+        host:
+          str_replace:
+            template:
+              get_param: [EndpointMap, AodhInternal, host]
+            params:
+              CLOUDNAME: {get_param: CloudName}
+              IP_ADDRESS: {get_param: AodhApiVirtualIP}
+        port:
+          get_param: [EndpointMap, AodhInternal, port]
+        protocol:
+          get_param: [EndpointMap, AodhInternal, protocol]
+        uri:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, AodhInternal, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, AodhInternal, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: AodhApiVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, AodhInternal, port]
+        uri_no_suffix:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, AodhInternal, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, AodhInternal, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: AodhApiVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, AodhInternal, port]
+      AodhPublic:
+        host:
+          str_replace:
+            template:
+              get_param: [EndpointMap, AodhPublic, host]
+            params:
+              CLOUDNAME: {get_param: CloudName}
+              IP_ADDRESS: {get_param: PublicVirtualIP}
+        port:
+          get_param: [EndpointMap, AodhPublic, port]
+        protocol:
+          get_param: [EndpointMap, AodhPublic, protocol]
+        uri:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, AodhPublic, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, AodhPublic, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: PublicVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, AodhPublic, port]
+        uri_no_suffix:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, AodhPublic, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, AodhPublic, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: PublicVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, AodhPublic, port]
       CeilometerAdmin:
         host:
           str_replace:
