Enable notifications on the overcloud
Configures all services to send notifications to rabbit.  The puppet
modules are not consistent regarding how this is done - some expose
notification config as a top-level param, others you need to set it
through a *_config structure, and cinder provides a separate class
dedicated to enabling ceilometer notifications.

Changes were needed for the cherry-pick because the stable/liberty
puppet modules do not expose as many notification parameters as
the master ones.

Change-Id: I23e2ddad3c59a06cfbfe5d896a16e6bad2abd943
(cherry picked from commit a1164462bf15b548e3111c1eea663a37d1ae9e7a)

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -84,6 +84,7 @@ nova::api::osapi_v3: true
 nova::scheduler::filter::ram_allocation_ratio: '1.0'
 nova::cron::archive_deleted_rows::hour: '*/12'
 nova::cron::archive_deleted_rows::destination: '/dev/null'
+nova::notification_driver: messaging
 
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
