Add support to tag patch port for Cisco Nexus1000v VSM bringup
In some deployments we will need to tag the patch port connecting to
vsm-br in order for traffic to go out. This patch takes passes the vlan
parameter to the puppet.

Change-Id: I18734ae39007985769db9371abe1740e0f2872f7

--- a/puppet/extraconfig/pre_deploy/controller/neutron-ml2-cisco-n1kv.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/neutron-ml2-cisco-n1kv.yaml
@@ -69,6 +69,9 @@ parameters:
   N1000vExistingBridge:
     type: boolean
     default: true
+  N1000vVSMHostMgmtIntfVlan:
+    type: number
+    default: 0
 #Plugin Parameters
   N1000vVSMUser:
     type: string
@@ -125,6 +128,7 @@ resources:
                 n1k_vsm::vsm_mgmt_netmask: {get_input: n1kv_vsm_mgmt_netmask}
                 n1k_vsm::vsm_mgmt_gateway: {get_input: n1kv_vsm_gateway_ip}
                 n1k_vsm::phy_gateway: {get_input: n1kv_vsm_gateway_ip}
+                n1k_vsm::phy_bridge_vlan: {get_input: n1kv_phy_brige_vlan}
                 # Cisco N1KV driver Parameters
                 neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_ip: {get_input: n1kv_vsm_ip}
                 neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_username: {get_input: n1kv_vsm_username}
@@ -159,6 +163,7 @@ resources:
         n1kv_vsm_password: {get_param: N1000vVSMPassword}
         n1kv_vsm_mgmt_netmask: {get_param: N1000vMgmtNetmask}
         n1kv_vsm_gateway_ip: {get_param: N1000vMgmtGatewayIP}
+        n1kv_phy_brige_vlan: {get_param: N1000vVSMHostMgmtIntfVlan}
         n1kv_vsm_pacemaker_ctrl: {get_param: N1000vPacemakerControl}
         n1kv_vsm_existing_br: {get_param: N1000vExistingBridge}
         n1kv_vsm_username: {get_param: N1000vVSMUser}
