--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1240,6 +1240,7 @@ resources:
             - '"%{::osfamily}"'
             - common
             - cinder_netapp_data # Optionally provided by ControllerExtraConfigPre
+            - cinder_eqlx_data # Optionally provided by ControllerExtraConfigPre
             - neutron_bigswitch_data # Optionally provided by ControllerExtraConfigPre
             - neutron_cisco_data # Optionally provided by ControllerExtraConfigPre
             - cisco_n1kv_data # Optionally provided by ControllerExtraConfigPre
