honor the rabbit user and password provided
Currently rabbit username and password are defaulted and attempting
to use anything else would result in a failure during deployment.

Change-Id: I8a2e240a19f915309eee45ea3c3368d131af6c1b
(cherry picked from commit cd9264d8d13fe0d460cb0497e554c0028e4c9eee)
Related:  rhbz#1261303

--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -403,7 +403,7 @@ resources:
                 nova::glance_api_servers: {get_input: glance_api_servers}
                 neutron::debug: {get_input: debug}
                 neutron::rabbit_password: {get_input: rabbit_password}
-                neutron::rabbit_user: {get_input: rabbit_user}
+                neutron::rabbit_user: {get_input: rabbit_username}
                 neutron::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
                 neutron::rabbit_port: {get_input: rabbit_client_port}
                 neutron_flat_networks: {get_input: neutron_flat_networks}
