--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1139,7 +1139,7 @@ resources:
                 # Neutron
                 neutron::bind_host: {get_input: neutron_api_network}
                 neutron::rabbit_password: {get_input: rabbit_password}
-                neutron::rabbit_user: {get_input: rabbit_user}
+                neutron::rabbit_user: {get_input: rabbit_username}
                 neutron::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
                 neutron::rabbit_port: {get_input: rabbit_client_port}
                 neutron::debug: {get_input: debug}
@@ -1230,6 +1230,8 @@ resources:
                 rabbitmq::node_ip_address: {get_input: rabbitmq_network}
                 rabbitmq::erlang_cookie: {get_input: rabbit_cookie}
                 rabbitmq::file_limit: {get_input: rabbit_fd_limit}
+                rabbitmq::default_user: {get_input: rabbit_username}
+                rabbitmq::default_pass: {get_input: rabbit_password}
                 # Redis
                 redis::bind: {get_input: redis_network}
                 redis_vip: {get_input: redis_vip}
