Change the Atomic image name so it's less specific
The atomic image name in glance was being set to 'fedora-atomic'.
The glance image can be any form of atomic distro so we shouldn't
name this specifically 'fedora-atomic', but instead 'atomic-image'.

Change-Id: Ic539b82b92e3fdd834750e591d8622b7dc85fc6d

--- a/environments/docker-rdo.yaml
+++ b/environments/docker-rdo.yaml
@@ -5,7 +5,7 @@ resource_registry:
   OS::TripleO::Compute::Net::SoftwareConfig: ../net-config-bridge.yaml
 
 parameters:
-  NovaImage: fedora-atomic
+  NovaImage: atomic-image
 
 parameter_defaults:
   DockerComputeImage: rthallisey/centos-binary-nova-compute:liberty
