--- a/environments/docker-rdo.yaml
+++ b/environments/docker-rdo.yaml
@@ -5,7 +5,7 @@ resource_registry:
   OS::TripleO::Compute::Net::SoftwareConfig: ../net-config-bridge.yaml
 
 parameters:
-  NovaImage: fedora-atomic
+  NovaImage: atomic-image
 
 # FIXME: When Kolla cuts liberty tag we can use kollaglue registry
 parameter_defaults:
